fixed some overflow issues

--- a/main.css
+++ b/main.css
@@ -1,15 +1,25 @@
 html {
-    min-width: 100vw;
-    min-height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
     box-sizing: border-box !important;
     font-size: 22px;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+}
+
+*, *:after, *:before {
+    box-sizing: border-box;
 }
 
 .nav-bar {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    max-width: 100%;
+    min-width: 100%;
     height: 60px;
     background-color: grey;
     color: white;
@@ -39,11 +49,11 @@ html {
     top: 60px;
     left: 0;
     height: calc(100vh - 60px);
-    width: 100vw;
+    width: 100%;
 }
 
 .content {
-    width: 320px;
+    width: 310px;
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -136,8 +146,8 @@ html {
 .movie-reviews {
     max-height: 400px;
     min-height: 400px;
-    min-width: 320px;
-    max-width: 320px;
+    min-width: 310px;
+    max-width: 310px;
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
@@ -164,8 +174,8 @@ html {
 
 .reviews {
     height: 100%;
-    max-width: 220px;
-    min-width: 220px;
+    max-width: 210px;
+    min-width: 210px;
     max-height: 400px;
     min-height: 400px;
     border: 1px solid black;
@@ -198,7 +208,7 @@ html {
 }
 
 .actors {
-    min-width: 320px;
+    min-width: 310px;
     min-height: 400px;
     max-height: 400px;
     margin: 10px 0;
@@ -217,6 +227,7 @@ html {
     padding: 0;
     margin: 0;
     overflow-y: auto;
+    max-height: 379px;
 }
 
 .actor {
